--- a/US_Cavity_Reconstruction/US_Cavity_Reconstruction/Resources/UI/US_Cavity_Reconstruction.ui
+++ b/US_Cavity_Reconstruction/US_Cavity_Reconstruction/Resources/UI/US_Cavity_Reconstruction.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>377</width>
-    <height>539</height>
+    <height>691</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -105,25 +105,38 @@
    </item>
    <item>
     <widget class="ctkCollapsibleButton" name="advancedCollapsibleButton">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="text">
       <string>Advanced</string>
      </property>
-     <property name="collapsed">
+     <property name="checked">
       <bool>true</bool>
+     </property>
+     <property name="collapsed">
+      <bool>false</bool>
      </property>
      <layout class="QFormLayout" name="formLayout_3">
       <item row="0" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Invert threshold: </string>
+         <string>Delay (seconds): </string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QCheckBox" name="invertOutputCheckBox">
-        <property name="toolTip">
-         <string>If checked, values above threshold are set to 0. If unchecked, values below are set to 0.</string>
+       <widget class="qMRMLSliderWidget" name="timerSelector"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Countdown:</string>
         </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLabel" name="countdownValueLabel">
         <property name="text">
          <string/>
         </property>
@@ -182,9 +195,19 @@
    <container>1</container>
   </customwidget>
   <customwidget>
+   <class>ctkSliderWidget</class>
+   <extends>QWidget</extends>
+   <header>ctkSliderWidget.h</header>
+  </customwidget>
+  <customwidget>
    <class>qMRMLNodeComboBox</class>
    <extends>QWidget</extends>
    <header>qMRMLNodeComboBox.h</header>
+  </customwidget>
+  <customwidget>
+   <class>qMRMLSliderWidget</class>
+   <extends>ctkSliderWidget</extends>
+   <header>qMRMLSliderWidget.h</header>
   </customwidget>
   <customwidget>
    <class>qMRMLWidget</class>
