re #10 - loads stl models for probe and retractor

--- a/US_Cavity_Reconstruction/US_Cavity_Reconstruction/Resources/UI/US_Cavity_Reconstruction.ui
+++ b/US_Cavity_Reconstruction/US_Cavity_Reconstruction/Resources/UI/US_Cavity_Reconstruction.ui
@@ -12,6 +12,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QPushButton" name="loadModelsButton">
+     <property name="text">
+      <string>Load Example Models</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="ctkCollapsibleButton" name="outputsCollapsibleButton">
      <property name="text">
       <string>Parameters</string>
