--- a/US_Cavity_Reconstruction/US_Cavity_Reconstruction/Resources/UI/US_Cavity_Reconstruction.ui
+++ b/US_Cavity_Reconstruction/US_Cavity_Reconstruction/Resources/UI/US_Cavity_Reconstruction.ui
@@ -25,28 +25,29 @@
      </property>
      <layout class="QFormLayout" name="formLayout_4">
       <item row="0" column="0">
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Model</string>
+         <string>Probe Tip Points</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="qMRMLNodeComboBox" name="modelSelector">
+       <widget class="qMRMLNodeComboBox" name="tipSelector">
         <property name="nodeTypes">
          <stringlist>
-          <string>vtkMRMLModelNode</string>
+          <string>vtkMRMLMarkupsFiducialNode</string>
          </stringlist>
-        </property>
-        <property name="showChildNodeTypes">
-         <bool>false</bool>
-        </property>
-        <property name="noneEnabled">
-         <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Point Cloud</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
        <widget class="qMRMLNodeComboBox" name="outputSelector">
         <property name="toolTip">
          <string>Pick the output to the algorithm.</string>
@@ -71,36 +72,13 @@
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Point List</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>Tip</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="qMRMLNodeComboBox" name="tipSelector">
-        <property name="nodeTypes">
-         <stringlist>
-          <string>vtkMRMLMarkupsFiducialNode</string>
-         </stringlist>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
        <widget class="QLabel" name="update">
         <property name="text">
          <string>Auto-update</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="2" column="1">
        <widget class="QCheckBox" name="autoUpdateCheckBox">
         <property name="text">
          <string/>
@@ -238,22 +216,6 @@
     <hint type="destinationlabel">
      <x>260</x>
      <y>94</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>US_Cavity_Reconstruction</sender>
-   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
-   <receiver>modelSelector</receiver>
-   <slot>setMRMLScene(vtkMRMLScene*)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>155</x>
-     <y>230</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>220</x>
-     <y>61</y>
     </hint>
    </hints>
   </connection>
