--- a/US_Cavity_Reconstruction/US_Cavity_Reconstruction/Resources/UI/US_Cavity_Reconstruction.ui
+++ b/US_Cavity_Reconstruction/US_Cavity_Reconstruction/Resources/UI/US_Cavity_Reconstruction.ui
@@ -146,6 +146,13 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="0" colspan="2">
+       <widget class="QPushButton" name="placeNeedleButton">
+        <property name="text">
+         <string>Place Needle</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
